# Wall-Select

./: angular.json  bun.lockb  package.json  tsconfig.json
.github/workflows/: build.yml  main.yml  publish.yml
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  events.rs  main.rs  prelude.rs
src-tauri/src/utils/: mod.rs  mod1.rs  mod2.rs
src/app/: app.component.html  app.component.scss  app.component.ts
src/app/components/add-folder/: add-folder.component.html  add-folder.component.scss  add-folder.component.ts
src/app/components/bottom-bar/: bottom-bar.component.html  bottom-bar.component.scss  bottom-bar.component.ts
src/app/components/card/: card.component.html  card.component.scss  card.component.ts
src/app/components/select-wallpaper-folder/: select-wallpaper-folder.component.html  select-wallpaper-folder.component.scss  select-wallpaper-folder.component.spec.ts  select-wallpaper-folder.component.ts
src/app/services/cache/: cache.service.ts
src/app/services/util/: select-folder.service.ts
src/app/shared/services/cache/: cache.service.ts  folders.service.ts
src/app/shared/services/util/: select-folder.service.spec.ts  utils.service.ts
src/app/shared/styles/: _breakpoints.scss  _functions.scss  _mixins.scss  _variables.scss
