[package]
name = "wall-select"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
thiserror = "1"
tauri = { version = "1", features = [ "path-all", "protocol-asset", "dialog-open", "fs-create-dir", "fs-read-file", "fs-read-dir", "fs-exists", "fs-write-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
